syntax = "proto3";

package mantrae.v1;

import "google/protobuf/timestamp.proto";

service SettingService {
  rpc GetSetting(GetSettingRequest) returns (GetSettingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc UpdateSetting(UpdateSettingRequest) returns (UpdateSettingResponse);
  rpc ListSettings(ListSettingsRequest) returns (ListSettingsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

message Setting {
  string key = 1;
  string value = 2;
  string description = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message GetSettingRequest {
  string key = 1;
}
message GetSettingResponse {
  Setting setting = 1;
}

message UpdateSettingRequest {
  string key = 1;
  string value = 2;
}
message UpdateSettingResponse {
  Setting setting = 1;
}

message ListSettingsRequest {}
message ListSettingsResponse {
  repeated Setting settings = 1;
}
